<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/device_name_set_scr"
        android:id="@+id/textViewDevice"
        android:layout_marginTop="10dp"
        android:layout_gravity="left"
        android:layout_marginLeft="20dp"
        android:textSize="@dimen/text_setting_scr"
        android:textStyle="bold" />

    <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/editTextDevice"
        android:layout_gravity="left"
        android:layout_marginLeft="20dp"
        android:textSize="@dimen/text_edit_setting_scr"
        android:textStyle="normal"
        android:maxWidth="200dp"
        android:minWidth="200dp"
        android:maxLength="15"
        android:layout_marginTop="5dp"
        android:inputType="text" />

    <Switch
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/device_type_set_scr"
        android:id="@+id/switchPulse"
        android:layout_marginLeft="20dp"
        android:textStyle="bold"
        android:textSize="@dimen/text_setting_scr"
        android:layout_marginTop="5dp"
        android:layout_marginRight="30dp"
        android:layout_gravity="left" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/device_ip_address_set_scr"
        android:id="@+id/textViewDeviceAdd"
        android:layout_gravity="left"
        android:layout_marginLeft="20dp"
        android:textStyle="bold"
        android:textSize="@dimen/text_setting_scr"
        android:layout_marginTop="5dp" />

    <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/editTextDeviceAdd"
        android:layout_gravity="left"
        android:layout_marginLeft="20dp"
        android:maxWidth="200dp"
        android:minWidth="200dp"
        android:layout_marginTop="5dp"
        android:inputType="textUri" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/device_port_set_scr"
        android:id="@+id/textViewDevicePort"
        android:layout_gravity="left"
        android:layout_marginLeft="20dp"
        android:textSize="@dimen/text_setting_scr"
        android:textStyle="bold"
        android:layout_marginTop="5dp" />

    <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/editTextDevicePort"
        android:layout_gravity="left"
        android:layout_marginLeft="20dp"
        android:minWidth="200dp"
        android:maxWidth="200dp"
        android:digits="0123456789"
        android:maxLength="5"
        android:layout_marginTop="5dp"
        android:inputType="number" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/device_login_set_scr"
            android:id="@+id/textViewDeviceLogin"
            android:layout_gravity="left"
            android:layout_marginLeft="20dp"
            android:textSize="@dimen/text_setting_scr"
            android:textStyle="bold"
            android:layout_marginTop="5dp" />

        <EditText
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:inputType="textNoSuggestions"
            android:ems="5"
            android:id="@+id/editSettingLogin"
            android:maxWidth="200dp"
            android:minWidth="200dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:maxLength="12"
            android:layout_gravity="left" />

        <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/device_psw_set_scr"
        android:id="@+id/textViewDevicePsw"
        android:layout_gravity="left"
        android:layout_marginLeft="20dp"
        android:textSize="@dimen/text_setting_scr"
        android:textStyle="bold"
        android:layout_marginTop="5dp" />

    <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="5"
        android:id="@+id/editSettingPsw"
        android:maxWidth="200dp"
        android:minWidth="200dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="5dp"
        android:maxLength="12"
        android:layout_gravity="left" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/device_icon_type_set_scr"
        android:id="@+id/textViewIconType"
        android:layout_gravity="left"
        android:layout_marginLeft="20dp"
        android:textSize="@dimen/text_setting_scr"
        android:textStyle="bold"
        android:layout_marginTop="5dp" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spinnerIcon"
        android:maxWidth="200dp"
        android:minWidth="200dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="5dp"
        android:layout_gravity="left" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/device_protocol_type_set_scr"
            android:id="@+id/textViewProtocolType"
            android:layout_gravity="left"
            android:layout_marginLeft="20dp"
            android:textSize="@dimen/text_setting_scr"
            android:textStyle="bold"
            android:layout_marginTop="5dp" />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/spinnerProtocol"
            android:maxWidth="200dp"
            android:minWidth="200dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:layout_gravity="left" />



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_setting_scr"
        android:onClick="saveDeviceSetting"
        android:id="@+id/settingDeleteButton"
        android:layout_gravity="center_horizontal"
        android:singleLine="true"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete_setting_scr"
            android:onClick="deleteDeviceSetting"
            android:id="@+id/settingSaveButton"
            android:layout_gravity="center_horizontal"
            android:singleLine="true"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp" />

    </LinearLayout>
    </LinearLayout>
    </ScrollView>
</LinearLayout>