<?xml version="1.0" encoding="utf-8"?>



<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:textAlignment="center">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scroll_about_id"
        android:scrollbars="vertical">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <TextView
        android:layout_width="266dp"
        android:layout_height="50dp"
        android:gravity="center"
        android:textAppearance="?android:attr/textAppearanceLargeInverse"
        android:text="@string/about_text_app"
        android:id="@+id/textViewAppAboutScr"
        android:layout_marginTop="30dp"
        android:background="#fe64c7ff"
        android:layout_gravity="center_horizontal" />
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:src="@drawable/oxilea"
        android:layout_gravity="center_horizontal" />
    <TextView
        android:layout_width="266dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="right"
        android:text="@string/about_text_dev"
        android:id="@+id/textViewDevAboutScr"
        android:layout_marginLeft="50dp"
        />
    <TextView
        android:layout_width="266dp"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:text="@string/about_text_date"
        android:id="@+id/textViewDateAboutScr"
        android:layout_marginLeft="50dp"
        />
    </LinearLayout>
    </ScrollView>
</LinearLayout>
